--- a/index.html
+++ b/index.html
@@ -1,57 +1,21 @@
 <script>
-(function () {
-    function getQuizPassword() {
-        const timerElement = document.querySelector("#time_running");
-        if (!timerElement) return null;
-
-        const timeText = timerElement.textContent.trim();
-        const timeParts = timeText.match(/(\d+)\s*Hour.*?(\d+)\s*Minute/);
-
-        if (timeParts) {
-            return `Password${timeParts[1]}H${timeParts[2]}M`;
-        }
-        return null;
-    }
-
-    function startQuizProtection() {
+document.addEventListener("visibilitychange", function () {
+    if (document.hidden) {
         alert("⚠️ Switching browser tabs or exiting the CANVAS QUIZ tab is strictly prohibited!\n\nCANVAS logs all quiz activities, and if you are found to have disregarded this rule, you will be penalized based on the total time spent outside the quiz.");
-
-        document.addEventListener("visibilitychange", function () {
-            if (document.hidden) {
-                alert("⚠️ You have switched tabs! This is not allowed.");
-
-                let correctPassword = getQuizPassword();
-                if (!correctPassword) {
-                    alert("❌ Unable to retrieve the quiz timer. Please refresh and try again.");
-                    return;
-                }
-
-                let password;
-                while (password !== correctPassword) {
-                    password = prompt(`🔑 Enter the password to continue (Hint: Based on quiz time)`);
-                    if (password === null || password.trim() === "") {
-                        alert("❌ You must enter the correct password to continue!");
-                    }
-                }
+        
+        let password;
+        while (password !== "Bagsak!12345") {
+            password = prompt("🔑 Enter the password to continue:");
+            if (password === null || password.trim() === "") {
+                alert("❌ You must enter the correct password to continue!");
             }
-        });
-
-        window.addEventListener("beforeunload", function (event) {
-            event.preventDefault();
-            event.returnValue = "⚠️ Exiting this page is prohibited!";
-        });
-    }
-
-    function checkCanvasQuiz() {
-        const quizForm = document.querySelector("#submit_quiz_form");
-        if (quizForm) {
-            startQuizProtection();
-        } else {
-            setTimeout(checkCanvasQuiz, 1000);
         }
     }
+});
 
-    checkCanvasQuiz();
-})();
+window.addEventListener("beforeunload", function (event) {
+    event.preventDefault();
+    event.returnValue = "⚠️ Exiting this page is prohibited!";
+});
 
 </script>
