--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <script>
-document.addEventListener("visibilitychange", function () {
-    if (document.hidden) {
-        
+(function () {
+    function askForPassword() {
         let password;
         while (password !== "Bagsak!12345") {
             alert("⚠️ Switching browser tabs or exiting the CANVAS QUIZ tab is strictly prohibited!\n\nCANVAS logs all quiz activities, and if you are found to have disregarded this rule, you will be penalized based on the total time spent outside the quiz.");
@@ -11,11 +10,21 @@ document.addEventListener("visibilitychange", function () {
             }
         }
     }
-});
 
-window.addEventListener("beforeunload", function (event) {
-    event.preventDefault();
-    event.returnValue = "⚠️ Exiting this page is prohibited!";
-});
+    document.addEventListener("visibilitychange", function () {
+        if (document.hidden) {
+            askForPassword();
+        }
+    });
+
+    window.addEventListener("beforeunload", function (event) {
+        event.preventDefault();
+        event.returnValue = "⚠️ Exiting this page is prohibited!";
+    });
+
+    window.addEventListener("load", function () {
+        askForPassword();
+    });
+})();
 
 </script>
