--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <script>
+
 (function () {
     function askForPassword() {
         let password;
@@ -13,6 +14,7 @@
 
     document.addEventListener("visibilitychange", function () {
         if (document.hidden) {
+            localStorage.setItem("tabSwitched", "true"); // Mark that tab was switched
             askForPassword();
         }
     });
@@ -23,8 +25,11 @@
     });
 
     window.addEventListener("load", function () {
-        askForPassword();
+        if (localStorage.getItem("tabSwitched") === "true") {
+            askForPassword();
+        }
     });
 })();
+
 
 </script>
