--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@ async function sendLog() {
         });
 
         const result = await response.json();
-        document.getElementById("status").innerText = result.message || "Log sent!";
+        console.log(result);
     } catch (error) {
-        document.getElementById("status").innerText = "Failed to send log.";
         console.error("Error sending log:", error);
     }
 }
